improved resizing height of window to avoid ...
... scrollbar

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -70,6 +70,5 @@ g.note.playing {
     
     grid-template-rows: auto auto 1fr 1fr;
     grid-template-columns: auto 1fr auto;
-    height: calc(100vh - 16px);
     grid-gap: 8px;
 }
